feat: update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["github>TurboCheetah/ts-boilerplate/.github/renovate"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base", "helpers:pinGitHubActionDigests", "group:allNonMajor"],
+  "labels": ["Meta: Dependencies"],
+  "schedule": ["before 12pm on Sunday"],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
